# num-format

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  bindings.rs  justfile
.github/workflows/: check.yml  test.yml
benches/: bench_usize.rs  benchmark.rs
c/: main.c
ci/: azure-install-rust.yml  azure-pipelines.yml
num-format/: Cargo.toml  README.md
num-format-benches/: Cargo.toml  README.md
num-format-benches/benches/: bench_usize.rs
num-format-benches/python/: bench.py
num-format-common/: Cargo.toml
num-format-common/src/: constants.rs  lib.rs  locale.rs
num-format-core/: Cargo.toml
num-format-core/src/: error.rs  error_kind.rs  lib.rs
num-format-dev/: .gitignore  Cargo.toml  README.md  temp1.txt  temp2.txt
num-format-dev/src/: create_module.rs  lib.rs  main.rs  parse_data.rs  rustfmt.rs  types.rs  write_file.rs  write_formats.rs
num-format-dev/src/utils/: format.rs  grouping.rs  mod.rs
num-format-system/: Cargo.toml
num-format-system/src/: encoding.rs  error.rs  lib.rs  main.rs  system_locale.rs
num-format-system/src/system_locale/: encoding.rs  unix.rs  windows.rs
num-format-system/src/system_locale/unix/: bsd.rs  linux.rs
num-format-system/tests/: test_system_locale.rs  test_unix.rs  test_windows.rs
num-format-windows/: Cargo.toml  README.md  build.rs
num-format-windows/src/: lib.rs
num-format/src/: buffer.rs  constants.rs  custom_format.rs  custom_format_builder.rs  error.rs  error_kind.rs  format.rs  impls.rs  lib.rs  locale.rs  parse_formatted.rs  parsing.rs  strings.rs  system_locale.rs  to_formatted_str.rs  to_formatted_string.rs
num-format/src/helpers/: mod.rs  separator.rs  write_bytes.rs  write_str_to_buffer.rs
num-format/src/impls/: int.rs  integers.rs  non_zero_uint.rs  num_big_int.rs  num_big_uint.rs  num_bigint.rs  uint.rs
num-format/src/system_locale/: unix.rs  windows.rs
num-format/src/system_locale/unix/: bsd.rs  encoding.rs  linux.rs
num-format/tests/: test_errors.rs  test_no_bytes_written.rs  test_num_bigint.rs  test_serialization.rs  test_system_locale_unix.rs
scripts/: README.md  bench.sh  check.sh  locale.sh  readme.sh  test.sh
src/: buffer.rs  constants.rs  custom.rs  custom_format.rs  custom_format_builder.rs  environment.rs  error.rs  error_kind.rs  errors.rs  format.rs  lib.rs  locale.rs  locale2.rs  strings.rs  system_locale.rs  temp.rs  temp2.rs  temp3.rs  to_formatted_string.rs  types_.rs  utils.rs  write_formatted.rs
src/details/: custom_builder.rs  formatter.rs  grouping.rs  mod.rs  number.rs
src/display/: display_float.rs  display_integer.rs  mod.rs
src/format/: custom_format.rs  custom_format_builder.rs  environment.rs  format.rs  locale.rs  mod.rs
src/format/utils/: mod.rs  safe_strs.rs
src/helpers/: write_str_to_buffer.rs
src/impls/: float.rs  int.rs  mod.rs  non_zero.rs  non_zero_uint.rs  num_big_int.rs  num_big_uint.rs  signed.rs  uint.rs  unsigned.rs
src/impls/features/: apint.rs  mod.rs  num_bigint.rs  num_rational.rs  ramp.rs  rug.rs
src/impls/utils/: separator.rs  write_bytes.rs  write_str_to_buffer.rs
src/system_locale/: mod.rs  nix.rs  unix.rs  windows.rs
src/system_locale/unix/: bsd.rs  encoding.rs  linux.rs
src/system_locale/windows/: bindings.rs
src/traits/: mod.rs  to_formatted_str.rs  to_formatted_string.rs  write_formatted.rs
src/utils/: max_len_strs.rs  mod.rs  pointer.rs  safe_ptr.rs  separator.rs  write_bytes.rs
src/windows/: bindings.rs  mod.rs
tests/: api.rs  signed.rs  test_environment.rs  test_no_bytes_written.rs  test_non_zero.rs  test_num_bigint.rs  test_signed.rs  test_system_locale.rs  test_system_locale_unix.rs  test_system_locale_windows.rs  test_unsigned.rs  unsigned.rs
tests/common/: expected.rs  input.rs  mod.rs
