[package]
name = "num-format"
version = "0.2.2"

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
build = "src/build/build.rs"
categories = ["encoding", "internationalization", "localization", "no-std", "value-formatting"]
description = "A Rust crate for producing string-representations of numbers, formatted according to international standards"
documentation = "https://docs.rs/num-format"
edition = "2018"
homepage = "https://github.com/bcmyers/num-format"
keywords = ["comma", "internationalization", "number", "separator", "thousands"]
license = "MIT/Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/bcmyers/num-format"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "bcmyers/num-format", branch = "master" }

[dependencies]
arrayvec = { version = "0.4", default-features = false }
itoa = { version = "0.4", default-features = false, features = ["i128"] }
num-bigint = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }
widestring = "0.4"

[target.'cfg(windows)'.build-dependencies]
bindgen = "0.47"

[features]
default = ["std"]
std = ["arrayvec/default", "itoa/default", "itoa/i128"]
with-serde = ["arrayvec/serde-1", "serde/derive"]

[dev-dependencies]
cfg-if = "0.1"
criterion = "0.2"
lazy_static = "1.2"
serde_json = "1.0"
walkdir = "2.2"

[[bench]]
name = "bench_usize"
harness = false
