[package]
name = "num-format-core"
version = "0.3.0" # Remember to keep html_root_url in lib.rs in sync!

edition = "2018"
publish = false # TODO

[dependencies]
arrayvec = { version = "0.4", default-features = false }
serde = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["arrayvec/default"]
with-serde = ["arrayvec/serde-1", "serde/derive"]
