[package]
name = "num-format-dev"
version = "0.1.0"

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
failure = "0.1"
indexmap = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rustfmt-nightly = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.2"

[features]
nightly = ["rustfmt-nightly"]
