[package]
name = "num-format-dev"
version = "0.1.0"

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.65"
indexmap = "1.9.1"
proc-macro2 = "1.0.46"
quote = "1.0.21"
rustfmt-nightly = { version = "1.4.21", optional = true }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
walkdir = "2.3.2"

[features]
nightly = ["rustfmt-nightly"]
