[package]
name = "num-format-system"
version = "0.3.0" # Remember to keep html_root_url in lib.rs in sync!

edition = "2018"
publish = false # TODO

build = "src/build/build.rs"
include = ["src/build/linux.h", "src/build/unix.h", "src/build/windows.h"]

[dependencies]
cfg-if = "0.1"
lazy_static = "1.2"
num-format-core = { path = "../num-format-core" }
serde = { version = "1.0", optional = true, features = ["derive"] }

[target.'cfg(unix)'.dependencies]
encoding_rs = "0.8"
libc = "0.2"
walkdir = "2.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnls"] }
widestring = "0.4"

[build-dependencies]
bindgen = "0.47"
cfg-if = "0.1"

[dev-dependencies]
rand = "0.6"
