[package]
name = "num-format-windows"
version = "0.3.0" # Remember to keep html_root_url in lib.rs in sync!

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = ["encoding", "internationalization", "localization", "no-std", "value-formatting"]
description = "A Rust crate for producing string-representations of numbers, formatted according to international standards"
documentation = "https://docs.rs/num-format"
edition = "2018"
homepage = "https://github.com/bcmyers/num-format"
keywords = ["comma", "internationalization", "number", "separator", "thousands"]
license = "MIT/Apache-2.0"
publish = false # TODO
readme = "README.md"
repository = "https://github.com/bcmyers/num-format"

build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "bcmyers/num-format", branch = "master" }

[build-dependencies]
bindgen = "0.47"
