[package]
name = "num-format-windows"
version = "0.3.0" # Remember to keep html_root_url in lib.rs in sync!

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = []
description = "A helper crate for num-format. Do not use directly."
documentation = "https://docs.rs/num-format-windows"
edition = "2018"
homepage = "https://github.com/bcmyers/num-format"
keywords = []
license = "MIT/Apache-2.0"
publish = false # TODO
readme = "README.md"
repository = "https://github.com/bcmyers/num-format"

build = "build.rs"
include = ["wrapper.h"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "bcmyers/num-format", branch = "master" }

[build-dependencies]
bindgen = "0.47"
