[package]
name = "num-format-windows"
version = "0.4.3" # Remember to keep html_root_url in lib.rs in sync!

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = []
description = "A helper crate for num-format. Do not use directly."
documentation = "https://docs.rs/num-format-windows"
edition = "2021"
homepage = "https://github.com/bcmyers/num-format/num-format-windows"
keywords = []
license = "MIT/Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/bcmyers/num-format/num-format-windows"

build = "build.rs"
include = ["build.rs", "Cargo.toml", "src/**/*", "wrapper.h"]

[build-dependencies]
bindgen = "0.61.0"
