[package]
name = "num-format"
version = "0.3.0" # Remember to keep html_root_url in lib.rs in sync!

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = ["encoding", "internationalization", "localization", "no-std", "value-formatting"]
description = "A Rust crate for producing string-representations of numbers, formatted according to international standards"
documentation = "https://docs.rs/num-format"
edition = "2018"
homepage = "https://github.com/bcmyers/num-format"
keywords = ["comma", "internationalization", "number", "separator", "thousands"]
license = "MIT/Apache-2.0"
publish = false # TODO
readme = "README.md"
repository = "https://github.com/bcmyers/num-format"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "bcmyers/num-format", branch = "master" }

[dependencies]
arrayvec = { version = "0.4", default-features = false }
cfg-if = "0.1"
itoa = { version = "0.4", default-features = false, features = ["i128"] }
num-format-core = { path = "../num-format-core", default-features = false }
num-format-system = { path = "../num-format-system", optional = true }
num-bigint = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["arrayvec/default", "itoa/default", "itoa/i128", "num-format-core/default", "num-format-system"]
with-serde = ["arrayvec/serde-1", "serde/derive"]

[dev-dependencies]
criterion = "0.2"
lazy_static = "1.2"
serde_json = "1.0"

[[bench]]
name = "bench_usize"
harness = false
